# afids

./: .gitignore  Makefile.am  Makefile.in  README  README_RPM  aclocal.m4  afids-full.spec  afids-na.spec  afids.am  afids.spec  common.am  configure  configure.ac  tailor.c
acp/: acp.am  acpb.c  acpb.h  acpb.y  acpf.c  acpf.l
config/m4/: ac_hdfeos.m4
doc/: NLC_User_Guide_v12.doc  Readme_VICAR_Install_copy.txt  doc.am  help.html  help_nlc.htm  vug.tar
filenotify/: filenotify.am  notifyTcl.cpp
filenotify/vif/: vif.cpp  vif.h  vifMain.cpp
ossimTcl/: ossimTcl.am  ossimTcl.cpp
pdf/: imagebound  pdf.am
script/: NOTE_vicarb.txt  afids.in  ctv2.in  run_me_if_moved.sh.in  script.am  setup_afids_env.csh.in  setup_afids_env.sh.in  taetm.in  tst_compare.sh  tst_compare_diff_command.sh  vextract.in  vicar.in  vicarb.in  vifclient.in
tcl/: afids.tcl  api.tcl  asc2fade.tcl  asc2shp.tcl  cbSupport.tcl  cibaoi.tcl  cibmos.tcl  classes.tcl  ctv2.tcl  decodeIgeoloDms.tcl  getNitfImageHeaderField.tcl  getnitfcorners.tcl  gui.tcl  html_library.tcl  ngclasses.tcl  nitfio.tcl  nlc.tcl  taehelp.tcl  tcl.am  wv2asc2fade.tcl
tdps/: tdps.am
tdps/data/: traf_codes.asc
tdps/doc/: Readme_tdps2c_Install.txt  help.html
tdps/graphics/: cbs_logo_large.tif  hand.pbm  hand.xbm  line.xbm  lineCursor.pbm  lineCursor.xbm  map.pbm  map.xbm  polygon.xbm  polygonCursor.pbm  polygonCursor.xbm  zoomin.pbm  zoomin.xbm  zoomout.pbm  zoomout.xbm
tdps/src/: DataSource.c  DataSource.h  Dem.c  Dem.h  EndeanTool.c  EndeanTool.h  Quadtree.c  Quadtree.h  QuadtreeBuilder.c  QuadtreeBuilder.h  angle.c  angle.h  aoi.tcl  attribute.tcl  canvasMouse.tcl  ciblog.cpp  ciblog.make  cnstnts.h  colors.tcl  coord3.c  coord3.h  coord3n.h  coordext.h  coordorg.c  coordorg.h  database.tcl  dbfopen.c  debug.tcl  dem_util.h  dtcc.c  dtcc.h  ellipse.h  ellpfns.c  ellpfns.h  error_codes.h  filters.tcl  globals.tcl  html_library.tcl  labels.h  linesIntersect.c  (+41 more)
tiffTcl/: tiffTcl.am  tiffTcl.c  tiffTcl.make
tma/: TMA-TDPS_Overview.docx  tma.am
tma/inc/: concave.h  contours.h  contoursTcl.h  distanceBetween2Points.h  dnet.h  element.h  gems.h  intersect.h  loadlines.h  minpath.h  minpathTcl.h  mover.h  plotline.h  pointToSegment.h  queryTerrain.h  realwork.h  region.h  rnf.h  sblinear.h  shiftNscale.h  subregion.h  tma.h  util.h  xlines.h
tma/src/: Makefile  appinit.C  concave.c  contour.C  contours.C  contoursTcl.C  dijkstra.C  distanceBetween2Points.C  dnet.c  element.C  intersect.c  loadlines.c  loadrnf.c  minpath.C  minpathTcl.C  mintime2contours.c  mover.C  overlay2polygons.c  pgm2ppm.c  plotline.c  pointToSegment.c  queryTerrain.C  rasterize.c  realwork.C  region.C  rnf.c  sblinear.C  subregion.C  util.C  xlines.c
vdev/: AfidsMakefile.in.in  AfidsMakefile.in.in.orig  AfidsMakefile.in.in.tar  afids.am  make.tcl
vdev/acca/: ACCA_Utils.c  ACCA_Utils.h  acca.c  acca.imake  acca.repack
vdev/accck/: accck.repack
vdev/acopin/: acopin.afmake  acopin.c
vdev/addnoise/: addnoise.F  addnoise.afmake
vdev/adjust/: adjust.repack
vdev/aggrg/: aggrg.c  aggrg.repack
vdev/aggrg2/: aggrg2.c  aggrg2.repack
vdev/alilog/: alilog.c  alilog.imake  alilog.repack
vdev/alirt/: try.py
vdev/aliwarp/: aliwarp.repack
vdev/amtlnfix/: amtlnfix.c  amtlnfix.imake  amtlnfix.repack
vdev/amtlnfx2/: amtlnfx2.c  amtlnfx2.imake  amtlnfx2.repack
vdev/apodize/: apodize.F  apodize.afmake
vdev/argus/: Makefile.template  README  argus.am  argus.rb  camera_calibration.rb  camera_calibration_config.yml.template  cib_image.rb  create_csv.rb  create_footprint.rb  create_image_time.rb  determine_highres_list.rb  determine_tile_list.rb  generate_one_deg.rb  generate_tile.rb  high_resolution_image.rb  jpl_processing_config.yml.template  ortho_rectify.rb  quick_copy_list  quick_copy_list.rb  quick_process.rb  quick_product_list.rb  rpc_generate.rb  setup_jpl_directory.rb  take_inventory.rb
vdev/asc2tcl/: asc2tcl.afmake  asc2tcl.c
vdev/ascnum/: ascnum.c  ascnum.imake  ascnum.repack
vdev/asmos/: asmos.repack  waris_params
vdev/asterlog/: asterlog.c  asterlog.imake  asterlog.repack
vdev/astroref/: astroref.c  astroref.repack
vdev/astrtchr/: astrtchr.F  astrtchr.afmake  astrtchr.com  astrtchr.repack
vdev/astwarp/: astwarp.repack
vdev/average/: average.F  average.afmake
vdev/bowtie/: bowtie.afmake  bowtie.c  bowtie.repack
vdev/boxflt2/: boxflt2.F  boxflt2.afmake  boxflt2.com  boxflt2.repack
vdev/brovey/: brovey.afmake  brovey.c
vdev/calfit/: calfit.afmake  calfit.c  calfit.repack
vdev/ccdnoise/: ccdnoise.F  ccdnoise.afmake  ccdnoise.imake  ccdnoise.repack
vdev/ccdrecip/: ccdrecip.F  ccdrecip.afmake  ccdrecip.imake  ccdrecip.repack
vdev/ccdslope/: ccdslope.F  ccdslope.afmake  ccdslope.imake  ccdslope.repack
vdev/ccomp/: ccomp.afmake
vdev/chipper2/: chipper2.c  chipper2.imake  chipper2.repack
vdev/chisq/: chisq.afmake  chisq.c  chisq.com  chisq.imake  chisq.make  chisq.repack
vdev/cibcut/: cibcut.repack
vdev/cibmos/: cibmos.repack
vdev/classifier/: classifier.afmake  classifier.c  classifier.imake  classifier.repack
vdev/clusterer/: clusterer.afmake  clusterer.c  clusterer.imake  clusterer.repack
vdev/cncmp/: cncmp.repack
vdev/colort/: colort.F  colort.afmake  colort.com  colort.repack
vdev/compject/: compject.c  compject.repack
vdev/compresschk/: compresschk.repack
vdev/comprs/: comprs.c  comprs.imake
vdev/comptab/: comptab.c  comptab.repack
vdev/comptab2/: comptab2.afmake  comptab2.c  comptab2.imake  comptab2.repack
vdev/concomp/: concomp.c  concomp.repack
vdev/concomp1/: concomp1.F  concomp1.afmake  concomp1.com  concomp1.repack
vdev/concompi/: concompi.c  concompi.repack
vdev/crtshp/: crtshp.afmake  crtshp.c  crtshp.com  crtshp.imake  crtshp.make  crtshp.repack
vdev/cutquad/: cutquad.repack
vdev/cvdnorm/: cvdnorm.c  cvdnorm.imake  cvdnorm.repack
vdev/demfix/: demfix.c  demfix.repack
vdev/deriv/: deriv.F  deriv.afmake
vdev/despike2/: despike2.afmake  despike2.c  despike2.com  despike2.imake  (+2 more)
web/: grant.sql  index.html  makeDb.csh  makeUsers.sql  makeUsers.tcl
(+1222 files in other folders)
